style: reformat indentation from tabs to 4 spaces
Pure whitespace change (tabWidth=4), no behavioral or logic edits.
Precedes the Checkstyle/PMD setup so that commit's diff isn't
dominated by whitespace noise.